--- a/HW3.Rnw
+++ b/HW3.Rnw
@@ -52,16 +52,14 @@ to this \texttt{.Rnw} file.\\
 
 <<size="scriptsize", warning=F, message=F>>=
 
-
 # All the possible prime numbers
-prime.numbers = 2:100
+prime.numbers <- 2:100
 
 # Outer loop to find all numbers from 2 to 100
 for (i in 1:100) {
   # Inner loop to check if it can go evenly into each number by numbers smaller than itself
   for (x in 2:(i-1)) {#Loop through everything smaller than i
-    # If it can be divided by things that are smaller than it than it is not prime so we get rid of everything that can 
-    #do that
+    # If it can be divided by things that are smaller than it than it is not prime so we get rid of everything that can do that
     prime.numbers = prime.numbers[prime.numbers != i | i %% x != 0]
     #Only doesn't add 2??
   }
@@ -71,23 +69,28 @@ for (i in 1:100) {
 prime.numbers = c(prime.numbers, 2)
 prime.numbers = sort(prime.numbers)
 
-#Making all the values we need to check into a dataframe
-numbers.to.check = outer(prime.numbers,prime.numbers, FUN = "*")
+#Making the products into a vector
 
-#Making into matrix to turn into a vector
-matrix.for.numbers = as.matrix(numbers.to.check)
+num.to.check=c()
 
-#Turning into vector
-vector.of.numbers.to.check = c(matrix.for.numbers)
+for(i in 1:length(prime.numbers)){
+  for(x in 1:length(prime.numbers)){
+    num.to.check = c(num.to.check, prime.numbers[i]*prime.numbers[x])
+    
+  }
+}
+
+num.to.check = sort(num.to.check)
+
 
 #Removing the squares and duplicates
-vector.of.numbers.to.check = unique(vector.of.numbers.to.check)
+num.to.check = unique(num.to.check)
 
 x = 1:100
 y = x^2
 
-vector.of.numbers.to.check = vector.of.numbers.to.check[-which(vector.of.numbers.to.check %in% y)]
-vector.of.numbers.to.check = sort(vector.of.numbers.to.check)
+num.to.check = num.to.check[-which(num.to.check %in% y)]
+num.to.check = sort(num.to.check)
 
 #Adding the original problem
 
@@ -100,13 +103,13 @@ original.numbers = c(6 , 10 , 14 , 15 , 21,
 
 #Finding the one that does not belong
 
-original.numbers[-which(original.numbers %in% vector.of.numbers.to.check)]
+original.numbers[-which(original.numbers %in% num.to.check)]
 
 #Finding the one to add back in
 
-vector.of.numbers.to.check = vector.of.numbers.to.check[which(vector.of.numbers.to.check < 100)] #Sorting below 100
+num.to.check = num.to.check[which(num.to.check < 100)] #Sorting below 100
 
-vector.of.numbers.to.check[-which(vector.of.numbers.to.check %in% original.numbers)]
+num.to.check[-which(num.to.check %in% original.numbers)]
 
 @
 \textbf{Reasoning:} 75 should not be in this vector because it can be broken down into 25 and 3 and 25 is not prime. 74 should replace it because it can be broken down into 37 and 2 which are both prime numbers. 
